# charms-py

./: .gitignore  Cargo.toml  README.md  pyproject.toml
charms/: __init__.py  __init__.pyi
src/: lib.rs
