[package]
name = "charms-py"
version = "0.1.0"
edition = "2024"
authors = ["darius <dariusmaitia@proton.me>"]
description = "The Charms Python API"

[lib]
name = "charms-py"
crate-type = ["cdylib"]

[dependencies]
charms-sdk = "0.10.0"
pyo3 = { version = "0.27.2", features = ["extension-module", "macros"] }
