[package]
name = "charms-py"
version = "0.1.0"
edition = "2024"
authors = ["darius <dariusmaitia@proton.me>"]
description = "The Charms Python API"

[lib]
name = "charms"
crate-type = ["cdylib"]

[dependencies]
charms-data = "0.10.0"
pyo3 = { version = "0.27.2", features = [
    "abi3-py39",
    "extension-module",
    "macros",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
